<resources>
    <string name="app_name">Inventory</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="product_currency">€</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier">Supplier</string>
    <string name="supplier_contact">Phone number</string>
    <string name="save">Save</string>
    <string name="contains">Inventory contains: </string>
    <string name="products"> products \n\n</string>
    <string name="delete_all_products">Delete all products</string>
    <string name="product_details"> Product details</string>
    <string name="edit_product">Edit product</string>
    <string name="quantity_change">Quantity was changed</string>
    <string name="out_of_stock">Out od stock</string>
    <string name="saving_error">Error saving product</string>
    <string name="saving_successful">Product saved successfully</string>
    <string name="updating_error">Error updating product</string>
    <string name="updating_successful">Product updated successfully</string>
    <string name="deleting_error">Error deleting product</string>
    <string name="deleting_successful">Product deleted successfully</string>
    <string name="confirm_deleting">Do you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="rows_deleted"> rows deleted from Inventory</string>
    <string name="confirm_discarding">Do you want to discard changes and exit?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue editing</string>
    <string name="product_name_required">Product name required</string>
    <string name="price_required">Product price required</string>
    <string name="quantity_required">Product quantity required</string>
    <string name="supplier_name_required">Supplier name required</string>
    <string name="supplier_phone_required">Supplier contact required</string>
    <string name="empty_inventory">Inventory is empty \n\nAdd your first product</string>
</resources>
